clean-up events for googleAnalytics tracking, add event.visibleMarker and fix event.maps rendering to show marker, add support for setting.allowPublicAddress, clean-up code for first test release

--- a/src/app/scss/ionic.app.scss
+++ b/src/app/scss/ionic.app.scss
@@ -397,7 +397,7 @@ $hero-wrap-bg-height: 170px;
 }
 
 
-#map {
+#map .wrap {
   $map-height: 360px;
   $map-height-sm: 240px;
   height: $map-height;
